fix: layout shift

--- a/app/globals.css
+++ b/app/globals.css
@@ -26,18 +26,15 @@ body {
 }
 
 .masonry-grid {
-  display: -webkit-box; /* Not needed if autoprefixing */
-  display: -ms-flexbox; /* Not needed if autoprefixing */
   display: flex;
-  margin-left: -30px; /* gutter size offset */
+  gap: 20px;
   width: auto;
 }
 .masonry-grid_column {
-  padding-left: 30px; /* gutter size */
   background-clip: padding-box;
 }
 
 .masonry-grid_column > div {
   background: grey;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
